# simple-restfull-rust

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/services/: sample.rs
model/: Cargo.toml
model/src/modules/: mod.rs  sample_model.rs
src/: handler.rs  main.rs
