[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
dotenv = "0.15.0"
env = "0.0.0"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14" , default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0.95"
